--- a/scenes/TEMPLATES/vehicle_types.xml
+++ b/scenes/TEMPLATES/vehicle_types.xml
@@ -3,6 +3,8 @@
 <vTypes>
   <type id="motorcycle" vClass="motorcycle" weight="1" />
   <type id="car" vClass="passenger" weight="4" />
-  <type id="taxi" vClass="passenger" weight="3" />
+  <type id="taxi" vClass="passenger" weight="2" />
   <type id="bus" vClass="bus" weight="1" />
+  <type id="truck" vClass="truck" weight="1" />
+  <type id="trailer" vClass="truck" weight="1" />
 </vTypes>
